--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.4"
 djangorestframework = "^3.15.2"
 django-filter = "^24.3"
 django-environ = "^0.11.2"
+psycopg2 = "^2.9.10"
 
 
 [build-system]
