--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.15.2"
 django-filter = "^24.3"
 django-environ = "^0.11.2"
 psycopg2 = "^2.9.10"
+drf-spectacular = "^0.28.0"
 
 
 [build-system]
